SERVER-12398 uassert instead of log warning on getMore runner error